tried to fix font size on request button and add spacing between buttons on the request form

--- a/skin/branding_skin/css/mashup_new.css
+++ b/skin/branding_skin/css/mashup_new.css
@@ -190,6 +190,8 @@ span.itemLocationName:before {
   padding: .5em 1em;
   border-radius: 3px;
   cursor: pointer;
+  font-size: 1rem;
+  margin-right: 1rem;
 }
 .actionsInputButtons[type="submit"]:hover, [type="submit"]#submitILLRequest:hover, [type="submit"]#submitPurchaseRequest:hover, [type="submit"]#exlidRequestTabFormSubmit:hover, #formActionsContainer input[type="submit"]:hover,.actionsInputButtons[type="submit"]:focus, [type="submit"]#submitILLRequest:focus, [type="submit"]#submitPurchaseRequest:focus, [type="submit"]#exlidRequestTabFormSubmit:focus, #formActionsContainer input[type="submit"]:focus {
   color:#004D66;
@@ -199,9 +201,9 @@ span.itemLocationName:before {
 .resetContainer a {
   text-decoration: none;
   text-transform: uppercase;
+  margin-left: 1em;
   padding: .5em 1em;
-  border-radius: 3px;
-  color: #333;
+  border-radius: 4px;
   text-transform: uppercase;
   background-color:#005C7A;
   color: #fff;
